--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@ Section 005
     <div class="common header">
         <img src="IMG_0266.jpg" height="100" alt="Jack Arntz in a Pink Suit"> 
         <span class="subheader">
-            <a href="bootstrapresume.html">Professional Page</a>
+            <a href="index.html">Professional Page</a>
             
         </span>
     </div>
